--- a/templates/galeria/buscar.html
+++ b/templates/galeria/buscar.html
@@ -23,11 +23,11 @@
                             {% for fotografia in cards %}
                             <li class="card">
                                 <a href="{% url 'imagem' fotografia.id %}">
-                                    {% if fotografia.foto == "" or fotografia.foto == null %}
-                                        <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/not-found.png'%}" alt="">
-                                    {% else %}
-                                        <img class="imagem__imagem" src="{{fotografia.foto.url}}" alt="">
-                                    {% endif %}
+                                {% if fotografia.foto == "" or fotografia.foto == null %}
+                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/not-found.png'%}" alt="foto">
+                                {% else %}
+                                    <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
+                                {% endif %}
                                 </a>
                                 <span class="card__tag">Estrelas</span>
                                 <div class="card__info">
@@ -42,9 +42,9 @@
                             </li>
                             {% endfor %}
                             {% else %}
-                                <div class="imagem__texto">
-                                    <p>Fotografias não encontradas</p>
-                                </div>
+                            <div class="imagem__texto">
+                                <p>Fotografias não encontradas</p>
+                            </div>
                             {% endif %}
                         </ul>
                     </div>
