--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -20,11 +20,9 @@
         <section class="menu-lateral">
             <nav class="menu-lateral__navegacao">
                 <a href="{% url 'index' %}"><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}"> Home</a>
-                <a href="{% url 'login' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Login</a>
-                <a href="{% url 'cadastro' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Cadastrar</a>
-                <a href="{% url 'logout' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Logout</a>
-                <a href="#"><img src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"> Mais vistas</a>
-                <a href="#"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Novas</a>
-                <a href="#"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Surpreenda-me</a>
+                <a href="{% url 'login' %}"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Login</a>
+                <a href="{% url 'cadastro' %}"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Cadastrar</a>
+                <a href="{% url 'logout' %}"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Logout</a>
+                <a href="{% url 'nova_imagem' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Nova Imagem</a>
             </nav>
         </section>
