--- a/templates/galeria/nova_imagem.html
+++ b/templates/galeria/nova_imagem.html
@@ -1,1 +1,27 @@
-<h1> Hello nova imagem </h1>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+        <section class="galeria" style="margin-left: 5em">
+                <form style="margin-left: 10em; margin-right: 10em" action="{% url 'nova_imagem' %}" method="POST">
+                    {% csrf_token %}
+                    <div class="row">
+                        {% for field in form.visible_fields %}
+                        <div class="col-12 col-lg-12" style="margin-bottom: 10px;">
+                            <label for="{{ field.id_for_label }}" style="color:#D9D9D9; margin-bottom: 5px;">{{field.label}}</label>
+                            {{ field }}
+                        </div>
+                            {% for error in field.errors %}
+                                <div style="margin-left: 1em" class="alert alert-danger">
+                                    <small>{{error}}</small>
+                                </div>
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
+                    <div>
+                        <button type="submit" class="btn btn-success col-12" style="padding-top: 5px;">Criar</button>
+                    </div>
+                </form>
+            </section>
+        </main>
+    </div>
+{% endblock %}
