--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -4,9 +4,9 @@
             <section class="conteudo">
                 <section class="imagem">
                     <div class="imagem__conteudo">
-{#                        <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/'%}{{fotografia.foto}}">#}
+{#                        <img class="imagem__imagem" src="{% static 'assets/imagens/galeria/'%}{{fotografia.foto}}">#}
                         {% if fotografia.foto == "" or fotografia.foto == null %}
-                            <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/not-found.png'%}" alt="">
+                            <img class="imagem__imagem" src="{% static 'assets/imagens/galeria/not-found.png'%}" alt="">
                         {% else %}
                             <img class="imagem__imagem" src="{{fotografia.foto.url}}" alt="">
                         {% endif %}
@@ -15,6 +15,10 @@
                                 <p class="imagem__titulo">{{fotografia.nome}}</p>
                                 <p class="imagem__descricao">{{fotografia.legenda}}</p>
                                 <p class="imagem__texto"> </p>
+                            </div>
+                            <div>
+                                <a href="{% url 'editar_imagem' fotografia.id %}"><button class="btn btn-success col-12" style="padding-top: 5px;">Editar</button></a>
+                                <a href="{% url 'deletar_imagem' fotografia.id %}"><button class="btn btn-danger col-12" style="padding-top: 5px;">Excluir</button></a>
                             </div>
                         </div>
                     </div>
