--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -3,17 +3,17 @@
 {% block content %}
             <section class="conteudo">
                 <section class="banner">
-                    <img class="banner__imagem" src="{% static '/assets/imagens/Banner(2).png' %}" alt="banner Alura Space">
+                    <img class="banner__imagem" src="{% static 'assets/imagens/Banner(2).png' %}" alt="banner Alura Space">
                     <h1 class="banner__titulo"> A galeria mais completa de fotos do espaço!</h1>
                 </section>
                 <section class="tags">
-                    <p class="tags__titulo">Busque por tags:</p>
-                    <ul class="tags__lista">
-                        <li class="tags__tag">Nebulosa</li>
-                        <li class="tags__tag">Estrela</li>
-                        <li class="tags__tag">Galáxia</li>
-                        <li class="tags__tag">Planeta</li>
-                    </ul>
+                        <p class="tags__titulo">Busque por tags:</p>
+                        <ul class="tags__lista">
+                                <li class="tags__tag"><a href="{% url 'filtro' 'NEBULOSA' %}" class="btn" style="color: #C9C9C9;">Nebulosa</a></li>
+                                <li class="tags__tag"><a href="{% url 'filtro' 'ESTRELA' %}" class="btn" style="color: #C9C9C9;">Estrela</a></li>
+                                <li class="tags__tag"><a href="{% url 'filtro' 'GALÁXIA' %}" class="btn" style="color: #C9C9C9;">Galáxia</a></li>
+                                <li class="tags__tag"><a href="{% url 'filtro' 'PLANETA' %}" class="btn" style="color: #C9C9C9;">Planeta</a></li>
+                        </ul>
                 </section>
                 <section class="galeria">
                     <div class="cards">
@@ -24,7 +24,7 @@
                             <li class="alura__card">
                                 <a href="{% url 'imagem' fotografia.id %}">
                                     {% if fotografia.foto == "" or fotografia.foto == null %}
-                                        <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/not-found.png'%}" alt="">
+                                        <img class="imagem__imagem" src="{% static 'assets/imagens/galeria/not-found.png'%}" alt="">
                                     {% else %}
                                         <img class="imagem__imagem" src="{{fotografia.foto.url}}" alt="">
                                     {% endif %}
@@ -35,7 +35,7 @@
                                     <div class="card__texto">
                                         <p class="card__descricao">{{fotografia.legenda}}</p>
                                         <span>
-                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
+                                            <img src="{% static 'assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
                                         </span>
                                     </div>
                                 </div>
